# High-Performance-Computing

./: README.md  TimeIt.c
CodeCoverage/SimpleStartExample/: CMakeLists.txt  reversed.c
CodeCoverage/SimpleStartExample/build8/: CMakeCache.txt  CTestTestfile.cmake  Makefile  cmake_install.cmake  reversed_str
Memory-Checking-Tools/: mpi_time_it  mpi_time_it.c  valgrind_memcheck  valgrind_memcheck.c
Multiprocessor-Timing/: CMakeLists.txt  CTest_requisites.txt  TimeIt.c  mpi_time_it.c  my_mpi_app.ctest
Multiprocessor-Timing/timerBuild/: CMakeCache.txt  CTestTestfile.cmake  MPITimeIt  Makefile  TimeIt  TimeIt.c.gcov  cmake_install.cmake  coverage.info  mpi_time_it.c.gcov
OpenMP/: helloOpenMP.c
github/High-Performance-Computing/: README.md
github/High-Performance-Computing/OpenMP/: helloOpenMP
